# dz06

./: .gitignore  CMakeLists.txt
.github/workflows/: dz06.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
